apps/prod/rbxsystems-ch/namespace.yml
# Namespace: rbxsystems-ch (rbxsystems.ch — site internacional)
apiVersion: v1
kind: Namespace
metadata:
  name: rbxsystems-ch
  labels:
    app.kubernetes.io/part-of: rbxsystems-ch
    environment: production
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
